Addressed an issue which IP edit error is shown to log-in users

--- a/src/views/pages/edit.ejs
+++ b/src/views/pages/edit.ejs
@@ -8,5 +8,5 @@
     <% if (locals.username === undefined) { %>
     <p><span class='text-danger fw-bold'>WARNING!</span>    You are NOT logged in. Your IP address will be PERMANENTLY logged and visible to everyone.</p>
     <% } %>
-    <button type='submit' type='button' class='btn btn-primary'>Save</button>
+    <button type='submit' type='button' class='btn btn-primary mt-3'>Save</button>
 </form>
