--- a/src/views/pageTools.ejs
+++ b/src/views/pageTools.ejs
@@ -2,10 +2,10 @@
 <div class='container w-auto bg-light justify-content-center border rounded' id='pageTools'>
     <div class='row'>
         <div class='col border-end p-2 pageToolItem'>
-            <a href='/edit/<%= title %>'>Edit</a>
+            <a href='/edit/<%= pagename %>'>Edit</a>
         </div>
         <div class='col border-start border-end p-2 pageToolItem'>
-            History
+            <a href='/history/<%= pagename %>'>History</a>
         </div>
         <div class='col border-start p-2 pageToolItem'>
             Delete
