--- a/src/views/head.ejs
+++ b/src/views/head.ejs
@@ -1,7 +1,5 @@
 <meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
+<script src='/bootstrap/js/bootstrap.bundle.min.js'></script>
 <link rel='stylesheet' href='/bootstrap/css/bootstrap.min.css'>
-<link rel='stylesheet' href='/bootstrap/css/bootstrap-grid.min.css'>
 <link rel='stylesheet' href='/css/mainview.css'>
-<script src='/js/jquery-1.12.0.min.js'></script>
-<script src='/bootstrap/js/bootstrap.min.js'></script>
