--- a/src/views/pages/edit.ejs
+++ b/src/views/pages/edit.ejs
@@ -3,10 +3,16 @@
     <div class='form-group'>
         <textarea class='form-control' id='editAreaBox' name='content'><%= content %></textarea>
     </div>
+    <div class="form-group mt-2 mb-2 row">
+        <label for='comment' class='col-sm-1 col-form-label sr-only'>Comment</label>
+        <div class="col-sm-11">
+            <input class="form-control" id='comment' maxlength=255 name='comment' type="text" placeholder="Max 255 characters">
+        </div>
+    </div>
     <!-- TODO:
     1) prehaps preview (use post?)-->
     <% if (locals.username === undefined) { %>
-    <p><span class='text-danger fw-bold'>WARNING!</span>    You are NOT logged in. Your IP address will be PERMANENTLY logged and visible to everyone.</p>
+    <p><span class='text-danger fw-bold'>WARNING!</span>    You are NOT logged in. Your IP address will be PERMANENTLY logged and will be visible to everyone.</p>
     <% } %>
     <button type='submit' type='button' class='btn btn-primary mt-3'>Save</button>
 </form>
