--- a/src/views/user/login.html
+++ b/src/views/user/login.html
@@ -1,14 +1,14 @@
 <div class='w-25 p-3'>
     <form action='/login' method='POST'>
-        <div class='form-group'>
+        <div class='form-group mb-2'>
             <label for='idInputbox'>ID</label>
             <input type='text' name='id' class='form-control' id='idInputbox'placeholder='Enter ID'>
         </div>
-        <div class='form-group'>
+        <div class='form-group mb-2'>
             <label for='passwordInputbox'>Password</label>
             <input type='password' name='password' class='form-control' id='passwordInputbox'placeholder='Enter Password'>
         </div>
+        <div class='mb-2'>Do not have an account? <a href='/signup'>Create one!</a></div>
         <button type='submit' class='btn btn-primary'>Login</button>
     </form>
-    Todo: signup
 </div>
