renderer under construction

--- a/src/views/pageTools.ejs
+++ b/src/views/pageTools.ejs
@@ -5,10 +5,13 @@
             <a href='/edit/<%= pagename %>'>Edit</a>
         </div>
         <div class='col border-start border-end p-2 pageToolItem'>
+            <a href='/move/<%= pagename %>'>Move</a>
+        </div>
+        <div class='col border-start border-end p-2 pageToolItem'>
             <a href='/history/<%= pagename %>'>History</a>
         </div>
         <div class='col border-start p-2 pageToolItem'>
-            Delete
+            <a href='/delete/<%= pagename %>'>Delete</a>
         </div>
     </div>
 </div>
