--- a/src/views/files/delete.ejs
+++ b/src/views/files/delete.ejs
@@ -1,4 +1,4 @@
-<form action='/delete/<%= title %>' method='POST' class='editForm'>
+<form action='/deletefile/<%= title %>' method='POST' class='editForm'>
     <div class="form-group mt-2 mb-2 row">
         <label for='comment' class='col-sm-1 col-form-label sr-only'>Comment</label>
         <div class="col-sm-11">
