--- a/src/views/nav.ejs
+++ b/src/views/nav.ejs
@@ -15,6 +15,14 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="/PageList">PageList</a>
                 </li>
+                <!-- filelist -->
+                <li class="nav-item">
+                    <a class="nav-link active" href="/FileList">FileList</a>
+                </li>
+                <!-- upload -->
+                <li class="nav-item">
+                    <a class="nav-link active" href="/Upload">Upload</a>
+                </li>
             </ul>
             <!-- search box -->
             <form class="d-flex mx-3" action='/w' method='POST'>
