--- a/src/views/pages/edit.ejs
+++ b/src/views/pages/edit.ejs
@@ -14,5 +14,6 @@
     <% if (locals.username === undefined) { %>
     <p><span class='text-danger fw-bold'>WARNING!</span>    You are NOT logged in. Your IP address will be PERMANENTLY logged and will be visible to everyone.</p>
     <% } %>
+    <p><span class='text-danger fw-bold'>WARNING!</span>    DO NOT save copyrighted materials without permission. <%= global.copyrightNotice %></p>
     <button type='submit' type='button' class='btn btn-primary mt-3'>Save</button>
 </form>
