--- a/src/views/head.ejs
+++ b/src/views/head.ejs
@@ -3,3 +3,4 @@
 <script src='/bootstrap/js/bootstrap.bundle.min.js'></script>
 <link rel='stylesheet' href='/bootstrap/css/bootstrap.min.css'>
 <link rel='stylesheet' href='/css/mainview.css'>
+<link rel='stylesheet' href='/css/ren.css'>
