--- a/src/views/outline.ejs
+++ b/src/views/outline.ejs
@@ -14,21 +14,18 @@
                 </div>
             <% } %>
 
-            <div class='container article-wrapper mt-5 h-75 p-4 border rounded-top'>
+            <div class='container article-wrapper h-75 p-4 border rounded-top'>
                 <div>
-                    <div class='row'>
-                        <div class='col p-2'>
-                            <h1><%= title %></h1>
-                        </div>
-                        <div class='col p-2'>
-                            <% if (locals.isPage) { %>
-                                <%- include('pageTools') %>
-                            <% } %>
-                        </div>
-                    </div>
+                    <h1><%= title %></h1>
+                    <% if (locals.isPage) { %>
+                        <%- include('pageTools') %>
+                    <% } %>
+                    <% if (locals.isFile) { %>
+                        <%- include('fileTools') %>
+                    <% } %>
                 </div>
-
-                <div>
+                <div style='clear: both'></div>
+                <div id='article'>
                     <%- content %>
                 </div>
             </div>
