--- a/src/views/head.ejs
+++ b/src/views/head.ejs
@@ -4,3 +4,5 @@
 <link rel='stylesheet' href='/bootstrap/css/bootstrap.min.css'>
 <link rel='stylesheet' href='/css/mainview.css'>
 <link rel='stylesheet' href='/css/ren.css'>
+<link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
+<title><%= title %> - <%= global.appname %></title>
