--- a/src/views/fileTools.ejs
+++ b/src/views/fileTools.ejs
@@ -1,14 +1,6 @@
 <!-- pageTools.ejs: edit, delete, move...-->
-<div class='container w-auto bg-light justify-content-center border rounded mb-3' id='pageTools'>
-    <div class='row'>
-        <div class='col border-end p-2 pageToolItem'>
-            <a href='/file/<%= title %>'>View</a>
-        </div>
-        <div class='col border-start border-end p-2 pageToolItem'>
-            <a href='#'>Move(not done)</a>
-        </div>
-        <div class='col border-start p-2 pageToolItem'>
-            <a href='/deletefile/<%= title %>'>Delete</a>
-        </div>
-    </div>
+<div class="container w-auto btn-group mb-3" id='pageTools' role="group" aria-label="Basic outlined example">
+  <a href="/file/<%= title %>" class="btn btn-outline-primary">View</a>
+  <a href='#' class="btn btn-outline-primary">Move (TBD)</a>
+  <a href='/deletefile/<%= title %>' class="btn btn-outline-primary">Delete</a>
 </div>
