--- a/src/views/pages/delete.ejs
+++ b/src/views/pages/delete.ejs
@@ -5,7 +5,7 @@
             <input class="form-control" id='comment' maxlength=255 name='comment' type="text" placeholder="Max 255 characters">
         </div>
     </div>
-    <div class="form-group mt-2 mb-2 row" style='white-space:nowrap;'>
+    <div class="form-group mt-2 mb-2 row">
     <span>Would you like to delete <%= title %>? <span class='text-danger fw-bold'>THIS CANNOT BE UNDONE!</span></span>
     </div>
     <button type='submit' type='button' class='btn btn-primary mt-3'>Delete</button>
