--- a/src/views/user/login.html
+++ b/src/views/user/login.html
@@ -1,4 +1,4 @@
-<div class='w-25 p-3'>
+<div class='p-3' style='max-width: 500px'>
     <form action='/login' method='POST'>
         <div class='form-group mb-2'>
             <label for='idInputbox'>ID</label>
