--- a/src/views/admin/index.html
+++ b/src/views/admin/index.html
@@ -3,4 +3,5 @@
     <li><a href='/admin/blockuser'>Block user (Login User)</a></li>
     <li><a href='/admin/blockip'>Block IP address</a></li>
     <li><a href='/admin/loginhistory'>Login History</a></li>
+    <li><a href='/admin/hiderev'>Hide specific revision of a page</a></li>
 </ul>
