--- a/src/views/footer.ejs
+++ b/src/views/footer.ejs
@@ -1,4 +1,4 @@
-<footer id='footer' class='bg-light text-center p-3'>
+<footer id='footer' class='bg-light text-center p-3 mt-auto'>
     <div>Copyright (C) <%= global.appname %></div>
     <div><a href='/Licence'>Licence</a></div>
     <div>Contents are licensed under <%= global.license %> unless specified otherwise.</div>
