--- a/src/views/admin/blockIP.ejs
+++ b/src/views/admin/blockIP.ejs
@@ -1,4 +1,5 @@
 <form action='/admin/blockip' method='POST'>
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <div class='mb-3 row'>
         <label for='tbUsername' class='col-sm-2 col-form-label'>IP Address (CIDR)</label>
         <div class='col-sm-10'>
