--- a/src/views/admin/blockuser.ejs
+++ b/src/views/admin/blockuser.ejs
@@ -1,4 +1,5 @@
 <form action='/admin/blockuser' method='POST'>
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <div class='mb-3 row'>
         <label for='tbUsername' class='col-sm-2 col-form-label'>Username</label>
         <div class='col-sm-10'>
