--- a/src/views/files/upload.ejs
+++ b/src/views/files/upload.ejs
@@ -1,5 +1,15 @@
 <% if (locals.username !== undefined) { %>
 <form action='/Upload' enctype='multipart/form-data' method='POST'>
+    <div class='mt-2 mb-2'>
+        <%- captcha %>
+        <div class='row'>
+            <label for='captchaIn' class='col-form-label col-sm-2'>CAPTCHA</b></label>
+            <div class='col-sm-10'>
+                <input class="form-control" maxlength=5 id='captchaIn' name='captcha' type="text" style='width:100px' autocomplete='off'>
+            </div>
+        </div>
+        <small class='form-text text-muted'>For spam protection, please type <b>five</b> characters shown above.</small>
+    </div>
     <div class='form-group mb-2'>
         <label for='filenameInputBox'>Filename</label>
         <input type='text' name='filename' maxlength='255' class='form-control' id='filenameInputBox' placeholder='Enter Filename'>
@@ -20,7 +30,6 @@
     </div> 
     <p><span class='text-danger fw-bold'>WARNING!</span>    DO NOT save copyrighted materials without permission. <%= global.copyrightNotice %></p>
     <p>You can only upload JPEG, JPG, PNG, GIF and WebP.</p>
-    </div>
     <button type='submit' id='uploadButton' class='btn btn-primary' d  isabled>Upload</button>
 </form>
 
