--- a/src/views/pages/delete.ejs
+++ b/src/views/pages/delete.ejs
@@ -1,4 +1,5 @@
 <form action='/delete/<%= title %>' method='POST' class='editForm'>
+    <input type='hidden' name='_csrf' value='<%= csrfToken %>'>
     <div class="form-group mt-2 mb-2 row">
         <label for='comment' class='col-sm-1 col-form-label sr-only'>Comment</label>
         <div class="col-sm-11">
