--- a/src/views/pages/move.ejs
+++ b/src/views/pages/move.ejs
@@ -11,6 +11,16 @@
             <input class="form-control" id='newName' maxlength=255 name='newName' type="text" placeholder="Max 255 characters">
         </div>
     </div>
+    <div class='mt-2 mb-2'>
+        <%- captcha %>
+        <div class='row'>
+            <label for='captchaIn' class='col-form-label col-sm-2'>CAPTCHA</b></label>
+            <div class='col-sm-10'>
+                <input class="form-control" maxlength=5 id='captchaIn' name='captcha' type="text" style='width:100px' autocomplete='off'>
+            </div>
+        </div>
+        <small class='form-text text-muted'>For spam protection, please type <b>five</b> characters shown above.</small>
+    </div>
     <% if (locals.username === undefined) { %>
     <p><span class='text-danger fw-bold'>WARNING!</span>    You are NOT logged in. Your IP address will be PERMANENTLY logged and will be visible to everyone.</p>
     <% } %>
