--- a/src/views/user/signup.ejs
+++ b/src/views/user/signup.ejs
@@ -33,6 +33,16 @@
             <small id='passwordConfirmDesc' class='form-text text-muted'>In order to ensure that you have entered your password correctly, please type it one more time.</small>
         </div>
         <p><span class='text-danger fw-bold'>WARNING!</span>    YOU CANNOT reset your password once you forget it. Make sure you make your password memorable.</p>
+        <div class='mt-2 mb-2'>
+            <%- captcha %>
+            <div class='row'>
+                <label for='captchaIn' class='col-form-label col-sm-4'>CAPTCHA</b></label>
+                <div class='col-sm-8'>
+                    <input class="form-control" maxlength=5 id='captchaIn' name='captcha' type="text" style='width:100px' autocomplete='off'>
+                </div>
+            </div>
+            <small class='form-text text-muted'>For spam protection, please type <b>five</b> characters shown above.</small>
+        </div>
         <button type='submit' class='btn btn-primary'>Sign up</button>
     </form>
     <script src='/js/signupPasswordCheck.js'></script>
