--- a/src/views/files/upload.ejs
+++ b/src/views/files/upload.ejs
@@ -16,10 +16,10 @@
     </div>
     <div class='form-group mb-2'>
         <label for='editAreaBox'>Explanation</label>
-        <textarea class='form-control' id='editAreaBox' name='explanation'></textarea>
+        <textarea class='form-control' id='editAreaBox' name='explanation' placeholder='Please include licence information.' ></textarea>
     </div>   
     <div class='form-group mb-2'>
-        <label for='inputFile' class='form-label'>Select File (MAX 20MB)</label> <!-- client side JS to autofill file name? -->
+        <label for='inputFile' class='form-label'>Select File (MAX 3MB)</label>
         <input class='form-control' type='file' name='inputFile' id='inputFile'>
     </div>
     <div class='form-group mb-2'>
@@ -30,7 +30,7 @@
     </div> 
     <p><span class='text-danger fw-bold'>WARNING!</span>    DO NOT save copyrighted materials without permission. <%= global.copyrightNotice %></p>
     <p>You can only upload JPEG, JPG, PNG, GIF and WebP.</p>
-    <button type='submit' id='uploadButton' class='btn btn-primary' d  isabled>Upload</button>
+    <button type='submit' id='uploadButton' class='btn btn-primary' disabled>Upload</button>
 </form>
 
 <script type='text/javascript' src='/js/upload.js'></script>
