--- a/src/views/user/signup.ejs
+++ b/src/views/user/signup.ejs
@@ -43,6 +43,7 @@
             </div>
             <small class='form-text text-muted'>For spam protection, please type <b>five</b> characters shown above.</small>
         </div>
+        <p>계정을 만들면 <a href='/w/개인정보처리방침'>개인정보처리방침</a>에 동의하는 것입니다.</p>
         <button type='submit' class='btn btn-primary'>Sign up</button>
     </form>
     <script src='/js/signupPasswordCheck.js'></script>
