--- a/src/public/css/ren.css
+++ b/src/public/css/ren.css
@@ -53,6 +53,6 @@ p:empty
 
 .ren-header
 {
-    margin-top: 1em;
-    margin-bottom: 1em;
+    margin-top: 1rem !important;
+    margin-bottom: 1rem !important;
 }
