--- a/src/views/footer.ejs
+++ b/src/views/footer.ejs
@@ -1,7 +1,6 @@
 <footer id='footer' class='bg-light text-center p-3 mt-auto'>
     <div>Copyright (C) <%= global.appname %></div>
-    <div><a href='/Licence'>Licence</a></div>
     <div>Contents are licensed under <%= global.license %> unless specified otherwise.</div>
     <div>본 웹사이트의 내용은 별도로 명시된 경우를 제외하고 <%= global.license %> 라이선스 하에 배포됩니다.</div>
-    <div><a href='/noEmail'>이메일 주소 무단 수집 거부</a></div>
+    <div><a href='/Licence'>Licence</a> | <a href='/w/개인정보처리방침'>개인정보처리방침</a> | <a href='/noEmail'>이메일 주소 무단 수집 거부</a></div>
 </footer>
