--- a/src/views/outline.ejs
+++ b/src/views/outline.ejs
@@ -10,7 +10,12 @@
             <section>
                 <div class='article-wrapper h-75 p-4 border rounded-top row'>
                     <div class='pb-2 mt-2 mb-3 border-bottom'>
-                        <h1 style='display:inline-block;overflow-wrap: anywhere;'><%= title %></h1>
+                        <h1 style='display:inline-block;overflow-wrap: anywhere;'>
+                            <%= title %>
+                            <% if (locals.titleInfo) { %>
+                                <h5 style='display: inline;margin-left:10px;'><%- locals.titleInfo %></h5>
+                            <% } %>
+                        </h1>
                         <% if (locals.isPage) { %>
                             <%- include('pageTools') %>
                         <% } %>
