--- a/src/public/css/rcsidebar.css
+++ b/src/public/css/rcsidebar.css
@@ -21,3 +21,10 @@
         margin-right: 0;
     }
 }
+@media (max-width: 575px)
+{
+    .article-wrapper
+    {
+        margin-right: -12px;
+    }
+}
