--- a/src/views/pages/edit.ejs
+++ b/src/views/pages/edit.ejs
@@ -1,4 +1,5 @@
 <link rel='stylesheet' href='/css/edit.css'>
+<script src='/js/editpreview.js'></script>
 <form action='/edit/<%= title %>' method='POST' class='editForm'>
     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <div class='form-group'>
@@ -21,12 +22,15 @@
         </div>
         <small class='form-text text-muted'>For spam protection, please type <b>five</b> characters shown above.</small>
     </div>
-    <!-- TODO:
-    1) prehaps preview (use post?)-->
     <% if (locals.username === undefined) { %>
     <p><span class='text-danger fw-bold'>WARNING!</span>    You are NOT logged in. Your IP address will be PERMANENTLY logged and will be visible to everyone. (비로그인 상태로 당신의 IP 주소가 영구히 기록되어 공개될 것입니다.)</p>
     <% } %>
     <p><span class='text-danger fw-bold'>WARNING!</span>    DO NOT save copyrighted materials without permission. (저작권이 존재하는 내용을 허가 없이 저장하지 마십시오.) <%= global.copyrightNotice %></p>
     <button type='submit' type='button' class='btn btn-primary mt-3'>Save</button>
+    <button type='button' class='btn btn-secondary mt-3' onclick='previewButtonClick()'>Preview</button>
     <% } %>
+</form>
+<form action='/preview/' method='POST' target='_blank' id='previewForm' style='display:none'>
+    <input type='hidden' name='title' value='<%= title %>'>
+    <input type='hidden' id='previewContent' name='content'>
 </form>
